--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 03:05:02 2018</p>
+         Last Run: Tue Nov 27 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>6</td>
+                        <td>W</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>6</td>
+                        <td>W</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>5</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "75",
-                 "78"
+                 "71",
+                 "73",
+                 "79"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
-                 "6",
-                 "5"
+                 "16",
+                 "17",
+                 "19"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 03:05:02 2018</p>
+         Last Run: Tue Nov 27 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>39</td>
-                        <td>77</td>
+                        <td>36</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -260,12 +260,12 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>22</td>
-                        <td>73</td>
+                        <td>20</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>93</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>21</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNE</td>
-                        <td>93</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "39",
-                 "22",
+                 "36",
+                 "20",
                  "21"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "73",
-                 "73"
+                 "76",
+                 "72",
+                 "72"
                ]
              },
              {
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "93",
-                 "93",
-                 "93"
+                 "92",
+                 "92"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 03:05:02 2018</p>
+         Last Run: Tue Nov 27 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-5</td>
                         <td>-8</td>
                         <td>16</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNE</td>
@@ -476,11 +476,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>15</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>65</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>55</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "73",
+                 "77",
+                 "72",
                  "68"
                ]
              },
@@ -613,8 +613,223 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "76",
-                 "65",
-                 "55"
+                 "64",
+                 "54"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Tue Nov 27 04:05:02 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>09:00 PM</td>
+                        <td>Clear</td>
+                        <td>-10</td>
+                        <td>-14</td>
+                        <td>4</td>
+                        <td>72</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>WNW</td>
+                        <td>19</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-11</td>
+                        <td>-16</td>
+                        <td>4</td>
+                        <td>74</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>16</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Clear</td>
+                        <td>-11</td>
+                        <td>-16</td>
+                        <td>4</td>
+                        <td>75</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>14</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
+                  var data ={
+           "labels":[
+             "09:00 PM",
+             "10:00 PM",
+             "11:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-14",
+                 "-16",
+                 "-16"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-10",
+                 "-11",
+                 "-11"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
+                  var data ={
+           "labels":[
+             "09:00 PM",
+             "10:00 PM",
+             "11:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "4",
+                 "4",
+                 "4"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "72",
+                 "74",
+                 "75"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "19",
+                 "16",
+                 "14"
                ]
              }
            ]
