--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 04:05:02 2018</p>
+         Last Run: Tue Nov 27 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-7</td>
+                        <td>-6</td>
                         <td>4</td>
                         <td>73</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>W</td>
-                        <td>17</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-7",
+                 "-6",
                  "-7"
                ]
              },
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
+                 "72",
                  "73",
                  "79"
                ]
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
                  "17",
+                 "18",
                  "19"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 04:05:02 2018</p>
+         Last Run: Tue Nov 27 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>36</td>
+                        <td>38</td>
                         <td>76</td>
                         <td>0</td>
                         <td>8</td>
@@ -259,11 +259,11 @@
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
-                        <td>-7</td>
+                        <td>-6</td>
                         <td>20</td>
                         <td>72</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>N</td>
                         <td>92</td>
                      </tr>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-7",
+                 "-6",
                  "-6"
                ]
              },
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "36",
+                 "38",
                  "20",
                  "21"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 04:05:02 2018</p>
+         Last Run: Tue Nov 27 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -461,9 +461,9 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-5</td>
-                        <td>-8</td>
-                        <td>16</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>7</td>
                         <td>77</td>
                         <td>0</td>
                         <td>6</td>
@@ -475,24 +475,24 @@
                         <td>Mostly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>15</td>
-                        <td>72</td>
+                        <td>7</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>64</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>54</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
+                 "-7",
                  "-7",
                  "-7"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-5",
+                 "-4",
                  "-4",
                  "-4"
                ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
-                 "15",
-                 "6"
+                 "7",
+                 "7",
+                 "5"
                ]
              },
              {
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "77",
-                 "72",
+                 "71",
                  "68"
                ]
              },
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "76",
-                 "64",
-                 "54"
+                 "65",
+                 "55"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 27 04:05:02 2018</p>
+         Last Run: Tue Nov 27 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,11 +679,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>19</td>
+                        <td>W</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,11 +691,11 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>WNW</td>
-                        <td>16</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "71",
                  "72",
-                 "74",
-                 "75"
+                 "74"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "16",
-                 "14"
+                 "20",
+                 "17",
+                 "15"
                ]
              }
            ]
